--- a/less/style.less
+++ b/less/style.less
@@ -21,6 +21,17 @@ h1, h2, h3, h4, h5, h6{
     max-width: 1200px;
 }
 
+button{
+    a{
+        text-decoration: none;
+        color: #fff;
+
+        &:hover{
+            color: #fff;
+        }
+    }
+}
+
 .navbar-scroll{
     height: 100px;
     z-index: 100;
@@ -681,6 +692,17 @@ h1, h2, h3, h4, h5, h6{
 
     @media only screen and (min-width: 992px){
         padding: 120px 0 82px;
+    }
+
+    button{
+        a{
+            text-decoration: none;
+            color: var(--bt-orange);
+    
+            &:hover{
+                color: #fff;
+            }
+        }
     }
 
     h2.title{
