--- a/less/style.less
+++ b/less/style.less
@@ -1421,3 +1421,292 @@ footer{
         }
     }
 }
+
+.page-node-portfolio-item{
+    #content-wrapper{
+        padding: 60px 0;
+
+        @media only screen and (min-width: 992px){
+            padding: 82px 0;
+        }
+
+        .carousel-inner{
+            margin-right: unset;
+            max-height: 500px;
+
+            .carousel-item{
+                img{
+                    width: 100%;
+                }
+            }
+        }
+
+        .carousel-indicators{
+            position: relative;
+            margin-top: 10px;   
+        }
+
+        .description{
+            margin-bottom: 2.5em;
+            P{
+                color: var(--bt-text);
+
+                strong{
+                    color: #050203;
+                }
+            }
+        }
+
+        .project-details{
+            background: #F6F4F9;
+            padding: 3em;
+            border-radius: 10px;
+
+            h5{
+                font-family: 'Barlow', sans-serif;
+                font-size: 110%;
+                font-weight: 600;
+                color: #050203;
+            }
+
+            p{
+                color: var(--bt-text);
+            }
+        }
+
+        .project-nav{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            border-top: 1px solid #eaeaea;
+            padding-top: 2em;
+
+            p{
+                color: var(--bt-text);
+                font-size: 80%;
+            }
+
+            a{
+                color: #050203;
+                text-decoration: none;
+                font-size: 90%;
+                font-weight: 600;
+            }
+
+            .left{
+                a{
+                    &::after{
+                        content: '';
+                        display: block;
+                        width: 2em;
+                        height: 1em;
+                        background: url(../images/left.svg) center center no-repeat;
+                        background-size: contain;
+                        margin-top: 5px;
+                    }
+                }
+            }
+
+            .right{
+                p{
+                    text-align: right;
+                }
+
+                a{
+                    &::after{
+                        content: '';
+                        display: block;
+                        width: 2em;
+                        height: 1em;
+                        background: url(../images/right.svg) center center no-repeat;
+                        background-size: contain;
+                        margin-top: 5px;
+                        position: relative;
+                        left: 75%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.page-node-service{
+    #content-wrapper{
+        padding: 60px 0;
+
+        @media only screen and (min-width: 992px){
+            padding: 82px 0;
+        }
+
+        .field-image{
+            margin-bottom: 2em;
+        }
+
+        .field-title{
+            margin-bottom: 2em;
+
+            h2{
+                text-transform: uppercase;
+            }
+        }
+
+        .field-body{
+            margin-bottom: 2em;
+
+            p{
+                color: var(--bt-text);
+            }
+
+            ul.highlights{
+                padding: 0;
+                list-style: none;
+                display: grid;
+                grid-gap: 1.5em;
+                margin-top: 2em;
+                
+                @media only screen and (min-width: 992px){
+                    grid-gap: 2em;
+                }
+
+                li{
+                    padding: 1.5em;
+                    background: #fff;
+                    border-left: 2px solid var(--bt-orange);
+                    box-shadow: 0px 0px 8px 2px #eaeaea;
+                    border-right: 1px solid #eaeaea;
+                    border-top: 1px solid #eaeaea;
+                    border-bottom: 1px solid #eaeaea;
+                }
+            }
+        }
+
+        .more-services{
+            background: #F6F4F9;
+            padding: 2em;
+            border-radius: 10px;
+            margin-bottom: 1em;
+
+            @media only screen and (min-width: 992px){
+                margin-bottom: 1.5em;
+            }
+
+            h2.title{
+                text-transform: uppercase;
+                margin-bottom: .5em;
+                font-size: 160%;        
+            }
+
+            ul{
+                list-style: none;
+                display: grid;
+                grid-gap: .5em;
+                padding: 0;
+                margin: 0;
+
+                li{
+                    padding: .8em;
+                    display: flex;
+
+                    a{
+                        color: var(--bt-text);
+                        text-decoration: none;
+                        flex-basis: 75%;
+                    }
+
+                    &:hover{
+                        box-shadow: 0px 0px 8px 2px #eaeaea;
+                        background-color: #fff;
+                        border-radius: 5px;
+
+                        a{
+                            &::after{
+                                content: '';
+                                width: 2em;
+                                height: 100%;
+                                background: url(../images/right-blue.svg) center center no-repeat;
+                                background-size: contain;
+                                display: block;
+                                float: right;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .quality{
+            background: url(../images/quality-bg@2x.jpg) center center no-repeat;
+            padding: 3em 4em;
+            background-size: cover;
+            position: relative;
+            border-radius: 10px;
+            margin-bottom: 1em;
+
+            @media only screen and (min-width: 992px){
+                margin-bottom: 1.5em;
+            }
+
+            &::before{
+                content: '';
+                display: block;
+                background-color: var(--bt-blue);
+                opacity: .82;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                border-radius: 10px;
+            }
+
+            .content{
+                z-index: 9;
+                position: relative;
+
+                .image-wrapper{
+                    margin: 0 auto 1.5em;
+                    width: 36%;
+
+                    img{
+                        width: 100%;
+                    }
+                }
+
+                h4{
+                    color: #fff;
+                    margin: 1.5em;
+                }
+
+                p{
+                    color: #fff;
+                    margin: 0;
+                    font-size: 80%;
+
+                    strong{
+                        font-size: 160%;
+                    }
+                }
+            }
+        }
+
+        .quick-quote{
+            padding: 1.5em;
+            text-align: center;
+            background: radial-gradient(farthest-side at 50% 46%, #274078, #14161D);
+
+            p{
+                margin: 0;
+                color: #898989;
+                font-size: 110%;
+                font-weight: 500;
+
+                a{
+                    text-decoration: none;
+                    color: #fff;
+                    position: relative;
+                    border-bottom: 2px solid var(--bt-orange);
+                }
+            }
+        }
+    }
+}
