--- a/less/style.less
+++ b/less/style.less
@@ -1572,10 +1572,14 @@ footer{
                     padding: 1.5em;
                     background: #fff;
                     border-left: 2px solid var(--bt-orange);
-                    box-shadow: 0px 0px 8px 2px #eaeaea;
+                    box-shadow: 0px 10px 60px 0px rgba(161, 156, 156, 0.2);
                     border-right: 1px solid #eaeaea;
                     border-top: 1px solid #eaeaea;
                     border-bottom: 1px solid #eaeaea;
+
+                    @media only screen and (min-width: 992px){
+                        padding: 2em;
+                    }
                 }
             }
         }
@@ -1606,17 +1610,21 @@ footer{
                 li{
                     padding: .8em;
                     display: flex;
+                    transition: all 500ms ease;
 
                     a{
                         color: var(--bt-text);
                         text-decoration: none;
-                        flex-basis: 75%;
+                        position: relative;
+                        padding-right: 4em;
+                        width: 100%;
                     }
 
                     &:hover{
                         box-shadow: 0px 0px 8px 2px #eaeaea;
                         background-color: #fff;
                         border-radius: 5px;
+                        transition: all 500ms ease;
 
                         a{
                             &::after{
@@ -1627,6 +1635,10 @@ footer{
                                 background-size: contain;
                                 display: block;
                                 float: right;
+                                position: absolute;
+                                right: 0;
+                                top: 0;
+                                transition: all 500ms ease;
                             }
                         }
                     }
@@ -1693,6 +1705,7 @@ footer{
             padding: 1.5em;
             text-align: center;
             background: radial-gradient(farthest-side at 50% 46%, #274078, #14161D);
+            border-radius: 10px;
 
             p{
                 margin: 0;
@@ -1705,6 +1718,248 @@ footer{
                     color: #fff;
                     position: relative;
                     border-bottom: 2px solid var(--bt-orange);
+                }
+            }
+        }
+    }
+}
+
+.page-node-contacts{
+    #content-wrapper{
+        padding: 60px 0;
+        background: linear-gradient(180deg, var(--bt-blue) 15%, #fff 10%);
+
+        @media only screen and (min-width: 768px){
+            background: linear-gradient(180deg, var(--bt-blue) 24%, #fff 10%);
+        }
+
+        @media only screen and (min-width: 992px){
+            padding: 82px 0;
+            background: linear-gradient(180deg, var(--bt-blue) 29%, #fff 10%);
+        }
+
+        .intro{
+            h4{
+                color: #fff;
+                font-family: 'Barlow', sans-serif;
+                font-size: 175%;
+                text-align: center;
+                font-weight: 600;
+
+                @media only screen and (min-width: 768px){
+                    text-align: left;
+                }
+            }
+
+            p{
+                color: #fff;
+                text-align: center;
+                font-size: 130%;
+
+                @media only screen and (min-width: 768px){
+                    text-align: left;
+                }
+            }
+        }
+
+        ul.socials{
+            padding: 0;
+            margin: 0 auto;
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            width: 96px;
+            justify-content: space-between;
+
+            @media only screen and (min-width: 768px){
+                margin: 0;
+            }
+
+            li{
+                a{
+                    color: #fff;
+                    font-size: 115%;
+                    text-decoration: none;
+                }
+            }
+        }
+
+        .contacts{
+            margin-top: 6em;
+            margin-bottom: 3em;
+
+            ul{
+                padding: 0;
+                margin: 0;
+                list-style: none;
+                display: grid;
+                grid-gap: 1.5em;
+
+                @media only screen and (min-width: 992px){
+                    grid-gap: 3em;
+                }
+
+                li{
+                    text-align: center;
+
+                    @media only screen and (min-width: 768px){
+                        text-align: left;
+                    }
+
+                    h4{
+                        font-family: 'Barlow', sans-serif;
+                        font-weight: 600;
+                    }
+
+                    p{
+                        color: var(--bt-text);
+                        margin-bottom: 4px;
+
+                        a{
+                            text-decoration: none;
+                            color: var(--bt-text);
+                        }
+                    }
+                }
+            }
+        }
+
+        .form-wrapper{
+            border: 1px solid #eaeaea;
+            border-radius: 10px;
+
+            @media only screen and (min-width: 992px){
+                box-shadow: 0px 10px 60px 0px rgba(161, 156, 156, 0.2);
+                border: none;
+            }
+
+            .form-top{
+                padding: 2em;
+                background: #F7F4F4;
+                border-radius: 10px 10px 0 0;
+                display: flex;
+                justify-content: space-between;
+                vertical-align: top;
+
+                @media only screen and (min-width: 992px){
+                    padding: 3em;
+                }
+
+                img{
+                    flex-basis: 20%;
+                    width: 100%;
+
+                    @media only screen and (min-width: 992px){
+                        flex-basis: 10.6%;
+                    }
+                }
+
+                p{
+                    flex-basis: 75%;
+                    margin: 0;
+                    font-size: 80%;
+                    color: #626262;
+
+                    @media only screen and (min-width: 768px){
+                        font-size: 100%;
+                        margin-top: 8px;
+                    }
+
+                    @media only screen and (min-width: 992px){
+                        flex-basis: 86%;
+                        font-size: 110%;
+                    }
+                }
+            }
+
+            .form-inner{
+                padding: 2em;
+                background: #fff;
+
+                @media only screen and (min-width: 992px){
+                    padding: 3em;
+                }
+
+                form{
+                    input, textarea{
+                        width: 100%;
+                        margin-bottom: 10px;
+                        border: none;
+                        background: #F7F4F4;
+                        padding: .5em .8em;
+                        border-radius: 5px;
+
+                        @media only screen and (min-width: 992px){
+                            margin-bottom: 20px;
+                        }
+
+                        &::placeholder{
+                            color: #BCBCBC;
+                            text-transform: capitalize;
+                            font-size: 90%;
+                        }
+                    }
+
+                    textarea{
+                        min-height: 120px;
+                    }
+                }
+
+                .captcha{
+                    border: 1px solid #eaeaea;
+                    border-radius: 5px;
+                    padding: 1em;
+                    position: relative;
+                    margin-top: 5px;
+
+                    @media only screen and (min-width: 992px){
+                        padding: 1.5em;
+                    }
+
+                    label{
+                        position: absolute;
+                        top: -13px;
+                        background: #fff;
+                        padding: 0 5px;
+                    }
+
+                    p.help-text{
+                        font-size: 88%;
+
+                        @media only screen and (min-width: 768px){
+                            margin-bottom: 5px;
+                        }
+                    }
+
+                    img{
+                        width: 40%;
+
+                        @media only screen and (min-width: 768px){
+                            width: 30%;
+                        }
+
+                        @media only screen and (min-width: 992px){
+                            width: 20%;
+                        }
+                    }
+
+                    input{
+                        @media only screen and (min-width: 992px){
+                            width: 50%;
+                        }
+                    }
+                }
+
+                button{
+                    width: 100%;
+                    border: none;
+                    background: var(--bt-blue);
+                    color: #fff;
+                    font-weight: 500;
+                    padding: .6em 0;
+                    margin-top: 20px;
+                    border-radius: 5px;
+                    text-transform: capitalize;
                 }
             }
         }
