--- a/css/style.css
+++ b/css/style.css
@@ -12171,42 +12171,129 @@ button a {
 button a:hover {
   color: #fff;
 }
-.navbar-scroll {
-  height: 100px;
+.navbar {
+  height: 70px;
   z-index: 100;
   position: absolute;
   width: 100%;
-}
-.navbar-scroll::before {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: inherit;
-  opacity: 0.8;
-  z-index: -9;
   border-bottom: 1px solid #C6C6C6;
 }
-.navbar-scroll .nav-wrapper_right .phone {
+@media only screen and (min-width: 768px) {
+  .navbar {
+    height: 90px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .navbar {
+    height: 100px;
+  }
+}
+.navbar.fixed-top {
+  position: fixed;
+  -webkit-animation: navbar-animation 0.6s;
+  animation: navbar-animation 0.6s;
+  background-color: #fff;
+  border: none;
+}
+.navbar.fixed-top .navbar-brand img {
+  box-sizing: border-box;
+  overflow: hidden;
+  padding-left: 100%;
+  background: url(../images/logo.svg) center center no-repeat;
+  background-size: contain;
+  height: 42px;
+}
+@media only screen and (min-width: 768px) {
+  .navbar.fixed-top .navbar-brand img {
+    height: 56px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .navbar.fixed-top .navbar-brand img {
+    height: 70px;
+  }
+}
+.navbar.fixed-top .nav-wrapper_search img {
+  box-sizing: border-box;
+  overflow: hidden;
+  padding-left: 100%;
+  background: url(../images/search-black.svg) center center no-repeat;
+  background-size: contain;
+  height: 27px;
+  width: 27px;
+}
+.navbar.fixed-top .nav-wrapper_right .nav-wrapper_menu-toggler .navbar-toggler span {
+  background: var(--bt-blue);
+}
+.navbar.fixed-top .nav-wrapper_right .phone .icon img {
+  box-sizing: border-box;
+  overflow: hidden;
+  padding-left: 100%;
+  background: url(../images/phone-2.svg) center center no-repeat;
+  background-size: contain;
+  height: 36px;
+  width: 27px;
+}
+.navbar.fixed-top .nav-wrapper_right .phone .number p {
+  color: var(--bt-text);
+}
+.navbar.fixed-top .nav-wrapper_right .phone .number h5 {
+  color: #000000;
+}
+.navbar .navbar-brand img {
+  width: 60%;
+}
+@media only screen and (min-width: 768px) {
+  .navbar .navbar-brand img {
+    width: 80%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .navbar .navbar-brand img {
+    width: 100%;
+  }
+}
+.navbar .nav-wrapper_right {
+  margin: auto 0;
+}
+.navbar .nav-wrapper_right .phone {
   height: 36px;
   box-sizing: border-box;
-  margin-right: 90px;
+  margin-right: 36px;
 }
-.navbar-scroll .nav-wrapper_right .phone .number {
+.navbar .nav-wrapper_right .phone .number {
   color: #fff;
   padding-left: 0.8em;
   position: relative;
   top: -3px;
 }
-.navbar-scroll .nav-wrapper_right .phone .number p {
+.navbar .nav-wrapper_right .phone .number p {
   text-transform: uppercase;
   font-size: 12px;
 }
-.navbar-scroll .nav-wrapper_right .phone .number h5 {
+.navbar .nav-wrapper_right .phone .number h5 {
   font-family: 'Barlow', sans-serif;
   font-size: 20px;
 }
-.navbar-scroll .nav-wrapper_right .nav-wrapper_menu-toggler button span {
+.navbar .nav-wrapper_right .nav-wrapper_search-box {
+  margin-right: 30px;
+}
+@media only screen and (min-width: 768px) {
+  .navbar .nav-wrapper_right .nav-wrapper_search-box {
+    margin-right: 60px;
+    padding-left: 35px;
+    border-left: 1px solid #C6C6C6;
+  }
+}
+.navbar .nav-wrapper_right .nav-wrapper_search-box a {
+  height: max-content;
+  margin: auto;
+}
+.navbar .nav-wrapper_right .nav-wrapper_menu-toggler .navbar-toggler {
+  display: block !important;
+  border-color: none !important;
+}
+.navbar .nav-wrapper_right .nav-wrapper_menu-toggler .navbar-toggler span {
   position: relative;
   height: 3px;
   width: 22px;
@@ -12217,7 +12304,7 @@ button a:hover {
   -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
 }
-.navbar-scroll .nav-wrapper_right .nav-wrapper_menu-toggler button:focus {
+.navbar .nav-wrapper_right .nav-wrapper_menu-toggler .navbar-toggler:focus {
   box-shadow: none;
 }
 .navbar-fixed {
@@ -12249,7 +12336,10 @@ button a:hover {
   font-family: 'Barlow', sans-serif;
   font-size: 20px;
 }
-.navbar-fixed .nav-wrapper_right .nav-wrapper_menu-toggler button span {
+.navbar-fixed .nav-wrapper_right .nav-wrapper_menu-toggler .navbar-toggler {
+  display: block !important;
+}
+.navbar-fixed .nav-wrapper_right .nav-wrapper_menu-toggler .navbar-toggler span {
   position: relative;
   height: 3px;
   width: 22px;
@@ -12260,7 +12350,7 @@ button a:hover {
   -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
 }
-.navbar-fixed .nav-wrapper_right .nav-wrapper_menu-toggler button:focus {
+.navbar-fixed .nav-wrapper_right .nav-wrapper_menu-toggler .navbar-toggler:focus {
   box-shadow: none;
 }
 #hero-wrapper {
