--- a/less/style.less
+++ b/less/style.less
@@ -32,28 +32,116 @@ button{
     }
 }
 
-.navbar-scroll{
-    height: 100px;
+.navbar{
+    height: 70px;
     z-index: 100;
     position: absolute;
     width: 100%;
+    border-bottom: 1px solid #C6C6C6;
+   
 
-    &::before{
-        content: '';
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: inherit;
-        opacity: .8;
-        z-index: -9;
-        border-bottom: 1px solid #C6C6C6;
+    @media only screen and (min-width: 768px){
+        height: 90px;
+    } 
+
+    @media only screen and (min-width: 768px){
+        height: 100px;
+    }
+
+    &.fixed-top{
+        position: fixed;
+        -webkit-animation: navbar-animation 0.6s;
+        animation: navbar-animation 0.6s;
+        background-color: #fff;
+        border: none;
+       
+
+        .navbar-brand{
+            img{
+                box-sizing: border-box;
+                overflow: hidden;
+                padding-left: 100%;
+                background: url(../images/logo.svg) center center no-repeat;
+                background-size: contain;
+                height: 42px;
+
+                @media only screen and (min-width: 768px){
+                    height: 56px;
+                }
+
+                @media only screen and (min-width: 992px){
+                    height: 70px;
+                }
+            }
+        }
+
+        .nav-wrapper_search{
+            img{
+                box-sizing: border-box;
+                overflow: hidden;
+                padding-left: 100%;
+                background: url(../images/search-black.svg) center center no-repeat;
+                background-size: contain;
+                height: 27px;
+                width: 27px;
+            }
+        }
+
+        .nav-wrapper_right {
+            .nav-wrapper_menu-toggler {
+                .navbar-toggler {
+                    span{
+                        background: var(--bt-blue);
+                    }
+                }
+            }
+
+            .phone {
+                .icon{
+                    img{
+                        box-sizing: border-box;
+                        overflow: hidden;
+                        padding-left: 100%;
+                        background: url(../images/phone-2.svg) center center no-repeat;
+                        background-size: contain;
+                        height: 36px;
+                        width: 27px; 
+                    }
+                }
+                .number {
+                    p{
+                        color: var(--bt-text);
+                    }
+
+                    h5{
+                       color: #000000;
+                    }
+                }
+            }
+        }
+    }
+    
+    .navbar-brand{
+        img{
+            width: 60%;
+
+            @media only screen and (min-width: 768px){
+                width: 80%;
+            } 
+
+            @media only screen and (min-width: 992px){
+                width: 100%;
+            }
+        } 
     }
 
     .nav-wrapper_right{
+        margin: auto 0;
+
         .phone{
             height: 36px;
             box-sizing: border-box;
-            margin-right: 90px;
+            margin-right: 36px;
 
             .number{
                 color: #fff;
@@ -73,8 +161,27 @@ button{
             }
         }
 
+        .nav-wrapper_search-box{
+            margin-right: 30px;
+            
+
+            @media only screen and (min-width: 768px){
+                margin-right: 60px;
+                padding-left: 35px;
+                border-left: 1px solid #C6C6C6;
+            }
+
+            a{
+                height: max-content;
+                margin: auto;
+            }
+        }
+
         .nav-wrapper_menu-toggler {
-            button{
+            .navbar-toggler{
+                display: block !important;
+                border-color: none !important;
+                
                 span{
                     position: relative;
                     height: 3px;
@@ -131,7 +238,9 @@ button{
         }
 
         .nav-wrapper_menu-toggler {
-            button{
+            .navbar-toggler{
+                display: block !important;
+
                 span{
                     position: relative;
                     height: 3px;
